@@ -1,4 +1,4 @@
-# Copyright (C) 2011-2013 by the Free Software Foundation, Inc.
+# Copyright (C) 2011-2015 by the Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -55,9 +55,9 @@ def csrf_check(mlist, token):
     try:
         issued, keymac = marshal.loads(binascii.unhexlify(token))
         key, received_mac = keymac.split(':', 1)
-        if not key.startswith(mlist.internal_name() + '+'):
+        if not key.startswith(mlist.internal_name().replace('@','%40') + '+'):
             return False
-        key = key[len(mlist.internal_name()) + 1:]
+        key = key[len(mlist.internal_name().replace('@','%40')) + 1:]
         if '+' in key:
             key, user = key.split('+', 1)
         else:
